# composio100

./: .env.example  .gitignore  FINAL_SUBMISSION_README.md  README.md  assignment.md  final_case_study.html  package.json  provided_apps.csv  pyproject.toml
.openai/: hosting.json
agent/: __init__.py  case_study_ui.py  cli.py  create_human_overlay.py  create_manual_selection.py  enums.py  exporters.py  finalize_submission.py  human_review.py  package_dataset.py  presentation.py  process_manual_audit.py  schemas.py  ssl_config.py
app/: globals.css  layout.tsx  page.tsx
config/: calibration_apps.json  research_policy.yaml
data/: apps.csv  final_dataset.json
evaluation/: audit_failure_taxonomy.json  blind_holdout_packet.md  blind_holdout_selection.json  browser_verification_results.json  browser_verification_results.md  calibration_batch_summary.json  calibration_batch_summary.md  failure_taxonomy.json  field_results.json  final_dataset_summary.json  final_dataset_summary.md  gold_set.json  html_validation_report.json  html_validation_report.md  human_verified_overlay.json  manual_audit_completed.md  manual_audit_packet.md  manual_audit_results.json  manual_audit_results.md  manual_audit_selection.json  manual_audit_selection.md  manual_audit_template.json  production_batch_summary.json  production_batch_summary.md  proposed_audit_fixes.md  salesforce_manual_audit.json  verification_before_after.json  verification_before_after.md
public/: assignment-compliance-audit.md  interview-questionnaire.md  research-agent.mjs  research-set.json  verification-sample.json
(+58 files in other folders)
