[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "composio100"
version = "0.1.0"
description = "Evidence-backed research and verification foundation for 100 fixed apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "composio",
    "composio-gemini",
    "google-genai",
    "groq",
    "openai>=1.0",
    "python-dotenv",
    "tenacity",
    "certifi",
    "truststore",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.8"]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest-tmp"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
